src/components/headerfooter.css
.header-container {
  @apply h-[60px] md:h-[100px] w-full
    fixed top-0 left-0 right-0 px-5 md:px-[120px]
    flex items-center justify-between z-20;
}

@media screen and (min-width: 768px) {
  .header-container {
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
  }
}


.header-nav {
  height: calc(100% - 80px);
  @apply bg-white;
  li {
    @apply h-16 md:h-auto p-4 md:p-0 border-b-1 border-b-[#d9d9d9] md:border-b-0 text-xl md:text-2xl font-medium tracking-wide md:px-4 md:py-2 rounded-lg transition-all duration-200 ease-out;
  }
}

.footer-nav, .header-nav {
  li:hover {
    @apply font-semibold text-primaryHover bg-black5 scale-105;
  }
}

.social-media-container {
  @apply flex items-center gap-5;
  a,
  img {
    height: 38px;
  }
}

@media (max-width: 768px) {
  .social-media-container {
    a,
    img {
      height: 26px;
    }
  }
}

